--- a/src/main/resources/templates/mail/demo.html
+++ b/src/main/resources/templates/mail/demo.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>邮件实例</title>
+    <title>天外来信</title>
 </head>
 <body>
-    <p>欢迎你,<span style="color: red;" th:text="${username}"></span>!</p>
+        <p>我们都有光明的未来,<span style="color: red" th:text="${username}"></span></p>
 </body>
 </html>
