--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,25 +25,25 @@
 							<li class="nav-item ml-3 btn-group-vertical">
 								<a class="nav-link" th:href="@{/index}">首页</a>
 							</li>
-							<li class="nav-item ml-3 btn-group-vertical" >
+							<li class="nav-item ml-3 btn-group-vertical" th:if="${loginUser!=null}">
 								<a class="nav-link position-relative" >消息<span class="badge badge-danger" >12</span></a>
 							</li>
-							<li class="nav-item ml-3 btn-group-vertical" >
-								<a class="nav-link">注册</a>
+							<li class="nav-item ml-3 btn-group-vertical" th:if="${loginUser==null}">
+								<a class="nav-link" th:href="@{/register}">注册</a>
 							</li>
-							<li class="nav-item ml-3 btn-group-vertical">
-								<a class="nav-link" >登录</a>
+							<li class="nav-item ml-3 btn-group-vertical" th:if="${loginUser==null}">
+								<a class="nav-link" th:href="@{/login}">登录</a>
 							</li>
-							<li class="nav-item ml-3 btn-group-vertical dropdown">
+							<li class="nav-item ml-3 btn-group-vertical dropdown" th:if="${loginUser!=null}">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									<img class="rounded-circle" style="width:30px;height: 30px"/>
+									<img class="rounded-circle"  th:src="${loginUser.getHeaderUrl()}"   style="width:30px;height: 30px"/>
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item text-center" >个人主页</a>
 									<a class="dropdown-item text-center" >账号设置</a>
-									<a class="dropdown-item text-center" >退出登录</a>
+									<a class="dropdown-item text-center" th:href="@{/logout}">退出登录</a>
 									<div class="dropdown-divider"></div>
-									<span class="dropdown-item text-center text-secondary">user</span>
+									<span class="dropdown-item text-center text-secondary"th:utext="${loginUser.getUsername()}">user</span>
 								</div>
 							</li>
 						</ul>
@@ -151,11 +151,11 @@
 							<a class="page-link" th:href="@{${page.getPath()}(current=${page.getCurrent()-1})}">上一页</a>
 						</li>
 
-						<li class="page-item" th:each="i:${#numbers.sequence(page.getFrom,page.getTo())}">
-							<a th:class="|page-link ${page.getCurrent()==i?'actice':''}|" th:href="@{${page.getPath()}(current=${i})}" th:text="${i}">1</a>
+						<li th:class="|page-item ${page.getCurrent()==i?'active':''}|" th:each="i:${#numbers.sequence(page.getFrom,page.getTo())}">
+							<a th:class="page-link" th:href="@{${page.getPath()}(current=${i})}" th:text="${i}">1</a>
 						</li>
 						<li th:class="|page-item ${page.getCurrent()==page.getTotalPage()?'disabled':''}|">
-							<a class="page-link" th:href="@{${page.getPath()}(current=${page.getCurrent()-1})}">下一页</a>
+							<a class="page-link" th:href="@{${page.getPath()}(current=${page.getCurrent()+1})}">下一页</a>
 						</li>
 						<li class="page-item">
 							<a th:class="page-link" th:href="@{${page.getPath()}(current=${page.getTotalPage()})}">末页</a>
