--- a/src/main/resources/templates/site/login.html
+++ b/src/main/resources/templates/site/login.html
@@ -25,10 +25,10 @@
 						<label for="username" class="col-sm-2 col-form-label text-right">账号:</label>
 						<div class="col-sm-10">
 							<input type="text"
-								   th:class="|form-control ${usernameMsg!=null?'is-invalid':''}|"
-								   th:value="${param.username}"
-								   id="username" name="username" placeholder="请输入您的账号!" required>
-							<div class="invalid-feedback" th:text="${usernameMsg}">
+								   th:class="|form-control  ${userNameMsg!=null?'is-invalid':''}|"
+								   th:value="${param.userName}"
+								   id="username" name="userName" placeholder="请输入您的账号!" required>
+							<div class="invalid-feedback"  th:text="${userNameMsg}">
 								该账号不存在!
 							</div>
 						</div>
@@ -38,7 +38,8 @@
 						<div class="col-sm-10">
 							<!--判断是否有错误信息，否则div内的错误不显示-->
 							<input type="password" class="form-control is-invalid"
-								   th:class="|form-control ${passwordMsg!=null?'is-invalid':''}|"
+
+								   th:class="|form-control  ${passwordMsg!=null?'is-invalid':''}|"
 								   th:value="${param.password}"
 								   id="password" name="password" placeholder="请输入您的密码!" required>
 							<div class="invalid-feedback" th:text="${passwordMsg}">
@@ -49,24 +50,24 @@
 					<div class="form-group row mt-4">
 						<label for="verifycode" class="col-sm-2 col-form-label text-right">验证码:</label>
 						<div class="col-sm-6">
-							<input type="text" th:class="|form-control ${codeMsg!=null?'is-invalid':''}|"
+							<input type="text" th:class="|form-control ${codeMsg!=null?'is-invalid':''}"
 								   id="verifycode" name="code" placeholder="请输入验证码!">
 							<div class="invalid-feedback" th:text="${codeMsg}">
 								验证码不正确!
 							</div>
 						</div>
 						<div class="col-sm-4">
-							<img th:src="@{/kaptcha}" id="kaptcha" style="width:100px;height:40px;" class="mr-2"/>
-							<a href="javascript:refresh_kaptcha();" class="font-size-12 align-bottom ">刷新验证码</a>
+							<img th:src="@{/kaptcha}" id="kaptcha" style="width:100px;height:40px;" class="mr-2" href="javascript:refresh_kaptcha()"/>
+							<a href="javascript:refresh_kaptcha()" class="font-size-12 align-bottom ">刷新验证码</a>
 						</div>
 					</div>				
 					<div class="form-group row mt-4">
 						<div class="col-sm-2"></div>
 						<div class="col-sm-10">
-							<input type="checkbox" id="remember-me" name="rememberme"
-								   th:checked="${param.rememberme}">
-							<label class="form-check-label" for="remember-me">记住我</label>
-							<a th:href="@{/user/forgetPassword}" class="text-danger float-right">忘记密码?</a>
+							<input type="checkbox" id="rememberMe" name="rememberMe"
+								   th:checked="${param.rememberMe}"/>
+							<label class="form-check-label" for="rememberMe">记住我</label>
+							<a href="forget.html" class="text-danger float-right">忘记密码?</a>
 						</div>
 					</div>				
 					<div class="form-group row mt-4">
@@ -89,10 +90,10 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 	<script th:src="@{/js/global.js}"></script>
 	<script>
-        function refresh_kaptcha() {
-            var path = CONTEXT_PATH + "/kaptcha?p=" + Math.random();
-            $("#kaptcha").attr("src", path);
-        }
+		function  refresh_kaptcha(){
+			var path=CONTEXT_PATH+"/kaptcha?p="+Math.random();
+			$("#kaptcha").attr("src",path);
+		}
 	</script>
 </body>
 </html>
