--- a/src/main/resources/templates/site/operate-result.html
+++ b/src/main/resources/templates/site/operate-result.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,6 +10,7 @@
 	<link rel="stylesheet" th:href="@{/css/global.css}" />
 	<title>操作结果</title>
 </head>
+
 <body class="bg-white">
 	<div class="nk-container">
 		<!-- 头部 -->
@@ -24,7 +26,7 @@
 					<hr class="my-4">
 					<p>
 						系统会在 <span id="seconds" class="text-danger">8</span> 秒后自动跳转,
-						您也可以点此 <a id="target" th:href="@{${target}}" class="text-primary">链接</a>, 跳转到<b th:text="${destination}">首页</b>!
+						您也可以点此 <a id="target" class="text-primary" th:href="@{${target}}">链接</a>, 跳转到<b >首页</b>!
 					</p>
 				</div>
 			</div>
