--- a/src/main/resources/templates/site/register.html
+++ b/src/main/resources/templates/site/register.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="icon" th:href="@{/img/icon.png}"/>
+	<link rel="icon" href="/img/icon.png"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
 	<link rel="stylesheet" th:href="@{/css/global.css}" />
 	<link rel="stylesheet" th:href="@{/css/login.css}" />
@@ -26,11 +28,11 @@
 						<div class="col-sm-10">
 							<!--required提交之前必填项，th:class ||前面那个一定有，后面那个需要判断-->
 							<input type="text"
-								   th:class="|form-control ${usernameMsg!=null?'is-invalid':''}|"
-								   th:value="${user!=null?user.username:''}"
+								   th:class="|form-control ${usernameMsg!=null?'is-invalid':''} |"
+								   th:value="${user!=null?user.getUsername():''}"
 								   id="username" name="username" placeholder="请输入您的账号!" required>
 							<div class="invalid-feedback" th:text="${usernameMsg}">
-								该账号已存在!
+
 							</div>
 						</div>
 					</div>
@@ -38,11 +40,11 @@
 						<label for="password" class="col-sm-2 col-form-label text-right">密码:</label>
 						<div class="col-sm-10">
 							<input type="password"
-								   th:class="|form-control ${passwordMsg!=null?'is-invalid':''}|"
-								   th:value="${user!=null?user.password:''}"
+								   th:class="|form-control ${passwordMsg!=null?'is-invalid':''} |"
+								   th:value="${user!=null?user.getPassword():''}"
 								   id="password" name="password" placeholder="请输入您的密码!" required>
 							<div class="invalid-feedback" th:text="${passwordMsg}">
-								密码长度不能小于8位!
+
 							</div>							
 						</div>
 					</div>
@@ -50,10 +52,10 @@
 						<label for="confirmPassword" class="col-sm-2 col-form-label text-right">确认密码:</label>
 						<div class="col-sm-10">
 							<input type="password"
-								   th:class="|form-control ${confirmPasswordMsg!=null?'is-invalid':''}|"
-								   th:value="${param.confirmPassword}"
+								   th:class="|form-control ${passwordMsg!=null?'is-invalid':''} |"
+									th:value="${user!=null?user.getPassword():''}"
 								   id="confirmPassword" name="confirmPassword" placeholder="请再次输入密码!" required>
-							<div class="invalid-feedback" th:text="${confirmPasswordMsg}">
+							<div class="invalid-feedback">
 								两次输入的密码不一致!
 							</div>
 						</div>
@@ -62,11 +64,11 @@
 						<label for="email" class="col-sm-2 col-form-label text-right">邮箱:</label>
 						<div class="col-sm-10">
 							<input type="email"
-								   th:class="|form-control ${emailMsg!=null?'is-invalid':''}|"
-								   th:value="${user!=null?user.email:''}"
+								   th:class="|form-control ${emailMsg!=null?'is-invalid':''} |"
+								   th:value="${user!=null?user.getEmail():''}"
 								   id="email" name="email" placeholder="请输入您的邮箱!" required>
-							<div class="invalid-feedback" th:text="${emailMsg}">
-								该邮箱已注册!
+							<div class="invalid-feedback" th:text="emailMsg">
+
 							</div>
 						</div>
 					</div>
@@ -90,5 +92,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 	<script th:src="@{/js/global.js}"></script>
+	<script th:src="@{/js/register.js}"></script>
 </body>
 </html>
