--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
 								<a class="nav-link" th:href="@{/index}">首页</a>
 							</li>
 							<li class="nav-item ml-3 btn-group-vertical" th:if="${loginUser!=null}">
-								<a class="nav-link position-relative" >消息<span class="badge badge-danger" >12</span></a>
+								<a th:href="@{/letter/list}" class="nav-link position-relative" >消息<span class="badge badge-danger">12</span></a>
 							</li>
 							<li class="nav-item ml-3 btn-group-vertical" th:if="${loginUser==null}">
 								<a class="nav-link" th:href="@{/register}">注册</a>
@@ -36,11 +36,11 @@
 							</li>
 							<li class="nav-item ml-3 btn-group-vertical dropdown" th:if="${loginUser!=null}">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									<img class="rounded-circle"  th:src="${loginUser.getHeaderUrl()}"   style="width:30px;height: 30px"/>
+									<img class="rounded-circle"  th:src="${loginUser.getHeaderUrl()}"   style="width:60px;height: 50px"/>
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item text-center" >个人主页</a>
-									<a class="dropdown-item text-center" >账号设置</a>
+									<a class="dropdown-item text-center" th:href="@{/user/setting}" >账号设置</a>
 									<a class="dropdown-item text-center" th:href="@{/logout}">退出登录</a>
 									<div class="dropdown-divider"></div>
 									<span class="dropdown-item text-center text-secondary"th:utext="${loginUser.getUsername()}">user</span>
@@ -120,12 +120,12 @@
 					<!--每次从discussPosts中取出一个map-->
 					<li class="media pb-3 pt-3 mb-3 border-bottom" th:each="dis:${discussPosts}">
 						<a href="site/profile.html">
-							<img th:src="${dis.user.getHeaderUrl()}" class="mr-4 rounded-circle" alt="用户头像" style="width:50px;height:50px;">
+							<img th:href="@{|/discuss/detail/${dis.post.getId()} |}" th:src="${dis.user.getHeaderUrl()}" class="mr-4 rounded-circle" alt="用户头像" style="width:55px;height:50px;">
 						</a>
 						<div class="media-body">
 							<h6 class="mt-0 mb-3">
 								<!--如果跳转路径有变量，要加上||。注意取变量是用$-->
-								<a  href="#" th:utext="${dis.post.getTitle()}" ></a>
+								<a  th:href="@{|/discuss/detail/${dis.post.getId()} |}" th:utext="${dis.post.getTitle()}" ></a>
 								<span class="badge badge-secondary bg-primary" th:if="${dis.post.getType()==1}">置顶</span>
 								<span class="badge badge-secondary bg-danger" th:if="${dis.post.getStatus()==1}">精华</span>
 							</h6>
@@ -134,14 +134,14 @@
 								<ul class="d-inline float-right">
 									<li class="d-inline ml-2">赞 <span >11</span></li>
 									<li class="d-inline ml-2">|</li>
-									<li class="d-inline ml-2">回帖 <span>7</span></li>
+									<li class="d-inline ml-2">回帖 <span th:text="${dis.post.getCommentCount()}"7</span></li>
 								</ul>
 							</div>
 						</div>						
 					</li>
 				</ul>
 				<!-- 分页 -->
-				<nav class="mt-5" th:if="${page.getRows()>0}">
+				<nav class="mt-5" th:if="${page.getRows()>0}" th:fragment="pagination">
 					<ul class="pagination justify-content-center">
 						<!--相当于/index?index=1-->
 						<li class="page-item">
