--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,40 +24,36 @@
 				<h6 class="mb-4">
 					<img src="http://static.nowcoder.com/images/img/icons/ico-discuss.png"/>
 					<!--使用utext标题如果是标签将正常显示，&lt;会显示为小于号-->
-					<span th:utext="${post.title}">备战春招，面试刷题跟他复习，一个月全搞定！</span>
+					<span th:utext="${post.getTitle()}">备战春招，面试刷题跟他复习，一个月全搞定！</span>
 					<div class="float-right">
-						<input type="hidden" id="postId" th:value="${post.id}">
-						<button type="button" th:class="|btn ${post.type==1?'btn-secondary':'btn-danger'} btn-sm|" id="topBtn"
-								th:text="${post.type==1?'已置顶':'置顶'}" sec:authorize="hasAnyAuthority('moderator')">置顶</button>
-						<button type="button" th:class="|btn ${post.status==1?'btn-secondary':'btn-danger'} btn-sm|" id="wonderfulBtn"
-								th:text="${post.status==1?'已加精':'加精'}" sec:authorize="hasAnyAuthority('moderator')">加精</button>
-						<button type="button" class="btn btn-danger btn-sm" id="deleteBtn"
-								th:disabled="${post.status==2}" sec:authorize="hasAnyAuthority('admin')">删除</button>
+						<button type="button" class="btn btn-danger btn-sm" id="topBtn">置顶</button>
+						<button type="button" class="btn btn-danger btn-sm" >加精</button>
+						<button type="button" class="btn btn-danger btn-sm">删除</button>
 					</div>
 				</h6>
 				<!-- 作者 -->
 				<div class="media pb-3 border-bottom">
-					<a th:href="@{|/user/profile/${user.id}|}">
-						<img th:src="${user.headerUrl}" class="align-self-start mr-4 rounded-circle user-header" alt="用户头像" >
+					<a >
+						<img th:src="${user.getHeaderUrl()}" class="align-self-start mr-4 rounded-circle user-header" alt="用户头像" >
 					</a>
 					<div class="media-body">
-						<div class="mt-0 text-warning" th:utext="${user.username}">寒江雪</div>
+						<div class="mt-0 text-warning"  th:utext="${user.getUsername()}">寒江雪</div>
 						<div class="text-muted mt-3">
-							发布于 <b th:text="${#dates.format(post.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b>
+							发布于 <b th:text="${#dates.format(post.getCreateTime(),'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b>
 							<ul class="d-inline float-right">
 								<li class="d-inline ml-2">
-									<a href="javascript:;" th:onclick="|like(this,1,${post.id},${post.userId},${post.id});|" class="text-primary">
-										<b th:text="${likeStatus==1?'已赞':'赞'}">赞</b> <i th:text="${likeCount}">11</i>
+									<a href="#"  class="text-primary">
+										<b >赞</b> <i >11</i>
 									</a>
 								</li>
 								<li class="d-inline ml-2">|</li>
-								<li class="d-inline ml-2"><a href="#replyform" class="text-primary">回帖 <i th:text="${post.commentCount}">7</i></a></li>
+								<li class="d-inline ml-2"><a href="#replyform" class="text-primary">回帖 <i th:text="${post.getCommentCount()}">7</i></a></li>
 							</ul>
 						</div>
 					</div>
 				</div>	
 				<!-- 正文 -->
-				<div class="mt-4 mb-3 content" th:utext="${post.content}">
+				<div class="mt-4 mb-3 content" th:utext="${post.getContent()}">
 					金三银四的金三已经到了，你还沉浸在过年的喜悦中吗？
 					如果是，那我要让你清醒一下了：目前大部分公司已经开启了内推，正式网申也将在3月份陆续开始，金三银四，春招的求职黄金时期已经来啦！！！
 					再不准备，作为19应届生的你可能就找不到工作了。。。作为20届实习生的你可能就找不到实习了。。。
@@ -72,7 +68,7 @@
 				<!--i标签之前已经去掉样式，因此就是普通的文字-->
 				<div class="row">
 					<div class="col-8">
-						<h6><b class="square"></b> <i th:text="${post.commentCount}">30</i>条回帖</h6>
+						<h6><b class="square"></b> <i th:text="${post.getCommentCount()}">30</i>条回帖</h6>
 					</div>
 					<div class="col-4 text-right">
 						<a href="#replyform" class="btn btn-primary btn-sm">&nbsp;&nbsp;回&nbsp;&nbsp;帖&nbsp;&nbsp;</a>
@@ -80,81 +76,84 @@
 				</div>
 				<!-- 回帖列表 -->
 				<ul class="list-unstyled mt-4">
-					<li class="media pb-3 pt-3 mb-3 border-bottom" th:each="cvo:${comments}" th:id="|huifu1-${page.offset + cvoStat.count}|">
-						<a th:href="@{|/user/profile/${cvo.user.id}|}">
-							<img th:src="${cvo.user.headerUrl}" class="align-self-start mr-4 rounded-circle user-header" alt="用户头像" >
+					<li class="media pb-3 pt-3 mb-3 border-bottom" th:each="cvo:${comments}">
+						<a >
+							<img th:src="${cvo.user.getHeaderUrl()}" class="align-self-start mr-4 rounded-circle user-header" alt="用户头像" >
 						</a>
 						<div class="media-body">
 							<div class="mt-0">
-								<span class="font-size-12 text-success" th:utext="${cvo.user.username}">掉脑袋切切</span>
+								<span class="font-size-12 text-success" th:text="${cvo.user.getUsername()}">掉脑袋切切</span>
 								<span class="badge badge-secondary float-right floor">
-									<i th:text="${page.offset + cvoStat.count}">1</i>#
+									<i th:text="${page.getOffset()+cvoStat.count}">1</i>
 								</span>
 							</div>
-							<div class="mt-2" th:utext="${cvo.comment.content}">
+							<div class="mt-2" th:utext="${cvo.comment.getContent()}">
 								这开课时间是不是有点晚啊。。。
 							</div>
 							<div class="mt-4 text-muted font-size-12">
-								<span>发布于 <b th:text="${#dates.format(cvo.comment.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b></span>
+								<span>发布于 <b th:text="${#dates.format(cvo.comment.getCreateTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b></span>
 								<ul class="d-inline float-right">
 									<li class="d-inline ml-2">
-										<a href="javascript:;" th:onclick="|like(this,2,${cvo.comment.id},${cvo.comment.userId},${post.id});|" class="text-primary">
-											<b th:text="${cvo.likeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${cvo.likeCount}">1</i>)
+										<a href="javascript:;"  class="text-primary">
+											<b>赞</b>(<i >1</i>)
 										</a>
 									</li>
 									<li class="d-inline ml-2">|</li>
-									<li class="d-inline ml-2"><a th:href="|#huifu1-${page.offset + cvoStat.count}|" class="text-primary">回复(<i th:text="${cvo.replyCount}">2</i>)</a></li>
+									<li class="d-inline ml-2"><a th:href="|#pinglun-${cvoStat.count}|" class="text-primary">回复(<i th:text="${cvo.replyCount}">2</i>)</a></li>
 								</ul>
 							</div>
 							<!-- 回复列表 -->
-							<ul class="list-unstyled mt-4 bg-gray p-3 font-size-12 text-muted">
-								<li class="pb-3 pt-3 mb-3 border-bottom" th:each="rvo:${cvo.replys}">
+							<ul th:id="|pinglun-${cvoStat.count}|" th:class="|list-unstyled mt-4 bg-gray p-3 font-size-12 text-muted ${cvo.replyCount>0?'':'collapse'}|" th:each="rvo:${cvo.replys}">
+								<li class="pb-3 pt-3 mb-3 border-bottom">
 									<div>
 										<span th:if="${rvo.target==null}">
-											<b class="text-info" th:text="${rvo.user.username}">寒江雪</b>:&nbsp;&nbsp;
+											<b class="text-info" th:text="${rvo.user.getUsername()}">寒江雪</b>:&nbsp;&nbsp;
 										</span>
 										<span th:if="${rvo.target!=null}">
-											<i class="text-info" th:text="${rvo.user.username}">Sissi</i> 回复
-											<b class="text-info" th:text="${rvo.target.username}">寒江雪</b>:&nbsp;&nbsp;
+											<i class="text-info" th:text="${rvo.user.getUsername()}">Sissi</i> 回复
+											<b class="text-info" th:text="${rvo.target.getUsername()}">寒江雪</b>:&nbsp;&nbsp;
 										</span>
-										<span th:utext="${rvo.reply.content}">这个是直播时间哈，觉得晚的话可以直接看之前的完整录播的~</span>
+										<span th:text="${rvo.reply.getContent()}">这个是直播时间哈，觉得晚的话可以直接看之前的完整录播的~</span>
 									</div>
 									<div class="mt-3">
-										<span th:text="${#dates.format(rvo.reply.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</span>
+										<span th:text="${#dates.format(rvo.reply.getCreateTime(),'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</span>
 										<ul class="d-inline float-right">
 											<li class="d-inline ml-2">
-												<a href="javascript:;" th:onclick="|like(this,2,${rvo.reply.id},${rvo.reply.userId},${post.id});|" class="text-primary">
-													<b th:text="${rvo.likeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${rvo.likeCount}">1</i>)
+												<a href="javascript:;"  class="text-primary">
+													<b >赞</b>(<i >1</i>)
 												</a>
 											</li>
 											<li class="d-inline ml-2">|</li>
 											<li class="d-inline ml-2"><a th:href="|#huifu-${rvoStat.count}|" data-toggle="collapse" class="text-primary">回复</a></li>
 										</ul>
-										<div th:id="|huifu-${rvoStat.count}|" class="mt-4 collapse">
-											<form method="post" th:action="@{|/comment/add/${post.id}|}">
+										<div  class="mt-4 collapse" th:id="|huifu-${rvoStat.count}|">
+											<form method="post" th:action="@{|/comment/add/${post.getId()} |}">
 												<div>
-													<input type="text" class="input-size" name="content" th:placeholder="|回复${rvo.user.username}|" required/>
+													<input type="text" class="input-size" name="content" th:placeholder="|回复给${rvo.user.getUsername()}|" required/>
 													<input type="hidden" name="entityType" value="2">
-													<input type="hidden" name="entityId" th:value="${cvo.comment.id}">
-													<input type="hidden" name="targetId" th:value="${rvo.user.id}">
+													<input type="hidden" name="entityId" th:value="${cvo.comment.getId()}">
+													<input type="hidden" name="targetId" th:value="${cvo.user.getId()}">
 												</div>
 												<div class="text-right mt-2">
-													<button type="submit" class="btn btn-primary btn-sm" onclick="#">&nbsp;&nbsp;回&nbsp;&nbsp;复&nbsp;&nbsp;</button>
+													<button type="submit" class="btn btn-primary btn-sm" onclick="">&nbsp;&nbsp;回&nbsp;&nbsp;复&nbsp;&nbsp;</button>
 												</div>
 											</form>
 										</div>
-									</div>								
+									</div>
 								</li>
-								<!-- 回复输入框 -->
+
+
+							</ul>
+							<ul class="list-unstyled mt-4 bg-gray p-3 font-size-12 text-muted">
 								<li class="pb-3 pt-3">
-									<form method="post" th:action="@{|/comment/add/${post.id}|}">
+									<form class="replyform" method="post" th:action="@{| /comment/add/${post.getId()} |}">
 										<div>
-											<input type="text" class="input-size" name="content" placeholder="请输入你的观点" required/>
+											<input type="text" class="input-size" name="content" placeholder="输入你的观点"/>
 											<input type="hidden" name="entityType" value="2">
-											<input type="hidden" name="entityId" th:value="${cvo.comment.id}">
+											<input type="hidden" name="entityId" th:value="${cvo.comment.getId()}">
 										</div>
 										<div class="text-right mt-2">
-											<button type="submit" class="btn btn-primary btn-sm" onclick="#">&nbsp;&nbsp;回&nbsp;&nbsp;复&nbsp;&nbsp;</button>
+											<button type="submit" class="btn btn-primary btn-sm" onclick="">&nbsp;&nbsp;回&nbsp;&nbsp;复&nbsp;&nbsp;</button>
 										</div>
 									</form>
 								</li>
@@ -169,12 +168,12 @@
 			</div>
 			<!-- 回帖输入框 -->
 			<div class="container mt-3">
-				<form class="replyform" method="post" th:action="@{|/comment/add/${post.id}|}">
+				<form class="replyform" method="post" th:action="@{| /comment/add/${post.getId()} |}">
 					<p class="mt-3">
 						<a name="replyform"></a>
 						<textarea placeholder="在这里畅所欲言你的看法吧!" name="content" required></textarea>
 						<input type="hidden" name="entityType" value="1">
-						<input type="hidden" name="entityId" th:value="${post.id}">
+						<input type="hidden" name="entityId" th:value="${post.getId()}">
 					</p>
 					<p class="text-right">
 						<button type="submit" class="btn btn-primary btn-sm">&nbsp;&nbsp;回&nbsp;&nbsp;帖&nbsp;&nbsp;</button>
