--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -26,9 +26,14 @@
 					<!--使用utext标题如果是标签将正常显示，&lt;会显示为小于号-->
 					<span th:utext="${post.getTitle()}">备战春招，面试刷题跟他复习，一个月全搞定！</span>
 					<div class="float-right">
-						<button type="button" class="btn btn-danger btn-sm" id="topBtn">置顶</button>
-						<button type="button" class="btn btn-danger btn-sm" >加精</button>
-						<button type="button" class="btn btn-danger btn-sm">删除</button>
+						<!--这三个按钮需要向服务器发送一个异步消息，传帖子的ID-->
+						<input type="hidden" id="postId" th:value="${post.getId()}">
+						<button type="button" class="btn btn-danger btn-sm" id="topBtn"
+						th:disabled="${post.type==1}" sec:authorize="hasAnyAuthority('moderator')">置顶</button>
+						<button type="button" class="btn btn-danger btn-sm" id="wonderfulBtn"
+						th:disabled="${post.status==1}" sec:authorize="hasAnyAuthority('moderator')">加精</button>
+						<button type="button" class="btn btn-danger btn-sm" id="deleteBtn"
+						th:disabled="${post.status==2}" sec:authorize="hasAnyAuthority('admin')">删除</button>
 					</div>
 				</h6>
 				<!-- 作者 -->
